# mago

./: Cargo.toml
crates/orchestrator/src/: lib.rs  merge.rs
crates/orchestrator/src/service/: format.rs  lint.rs
src/commands/: analyze.rs  format.rs  lint.rs
src/utils/: git.rs
