[package]
name = "mago"
version = "1.20.1"
edition = "2024"
authors = ["Saif Eddin Gmati <azjezz@carthage.software>"]
license = "MIT OR Apache-2.0"
description = "A comprehensive suite of PHP tooling inspired by Rust’s approach, providing parsing, linting, formatting, and more through a unified CLI and library interface."
homepage = "https://mago.carthage.software"
repository = "https://github.com/carthage-software/mago"
rust-version = "1.94.0"
exclude = ["docs", "composer", "scripts"]

[workspace]
package.edition = "2024"
package.authors = ["Saif Eddin Gmati <azjezz@carthage.software>"]
package.license = "MIT OR Apache-2.0"
package.version = "1.20.1"
package.homepage = "https://mago.carthage.software"
package.repository = "https://github.com/carthage-software/mago"
package.rust-version = "1.94.0"
members = ["crates/*"]

[workspace.lints.clippy]
large_enum_variant = { level = "allow" }
print_stdout = { level = "forbid" }
print_stderr = { level = "forbid" }
dbg_macro = { level = "forbid" }

[workspace.dependencies]
mago-syntax-core = { path = "crates/syntax-core", version = "1.20.1" }
mago-syntax = { path = "crates/syntax", version = "1.20.1" }
mago-type-syntax = { path = "crates/type-syntax", version = "1.20.1" }
mago-casing = { path = "crates/casing", version = "1.20.1" }
mago-composer = { path = "crates/composer", version = "1.20.1" }
mago-docblock = { path = "crates/docblock", version = "1.20.1" }
mago-text-edit = { path = "crates/text-edit", version = "1.20.1" }
mago-formatter = { path = "crates/formatter", version = "1.20.1" }
mago-fingerprint = { path = "crates/fingerprint", version = "1.20.1" }
mago-atom = { path = "crates/atom", version = "1.20.1" }
mago-linter = { path = "crates/linter", version = "1.20.1" }
mago-names = { path = "crates/names", version = "1.20.1" }
mago-reporting = { path = "crates/reporting", version = "1.20.1" }
mago-span = { path = "crates/span", version = "1.20.1" }
mago-wasm = { path = "crates/wasm", version = "1.20.1" }
mago-php-version = { path = "crates/php-version", version = "1.20.1" }
mago-analyzer = { path = "crates/analyzer", version = "1.20.1" }
mago-algebra = { path = "crates/algebra", version = "1.20.1" }
mago-codex = { path = "crates/codex", version = "1.20.1" }
mago-prelude = { path = "crates/prelude", version = "1.20.1" }
mago-semantics = { path = "crates/semantics", version = "1.20.1" }
mago-collector = { path = "crates/collector", version = "1.20.1" }
mago-database = { path = "crates/database", version = "1.20.1" }
mago-guard = { path = "crates/guard", version = "1.20.1" }
mago-orchestrator = { path = "crates/orchestrator", version = "1.20.1" }
tracing = { version = "0.1.40" }
foldhash = "0.2"
serde_json = { version = "1.0.138" }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
ordered-float = { version = "5.0", default-features = false, features = ["serde"] }
pretty_assertions = { version = "1.4.1" }
codespan-reporting = { version = "0.13.1", features = ["serde", "serialization"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
config = { version = "0.15.4", features = ["toml", "yaml", "json"] }
toml = "1.0.3"
regex = "1.11.0"
cruet = "0.15.0"
indicatif = { version = "0.18.0" }
paste = "1.0.15"
criterion = "0.8.1"
clap = { version = "4.5.20", features = ["cargo", "derive", "unicode", "wrap_help"] }
clap_complete = "4.5.59"
termtree = "1.0.0"
wasm-bindgen = "0.2.97"
serde-wasm-bindgen = "0.6"
diffy = "0.4.0"
termcolor = "1.4.1"
indoc = "2"
ureq = { version = "3", features = ["rustls", "json"] }
self-replace = "1"
semver = "1"
tar = "0.4"
flate2 = "1"
zip = { version = "6", default-features = false, features = ["deflate"] }
tempfile = "3.15.0"
colored = "3.0.0"
blake3 = "1.8.1"
memchr = "2.7.4"
dialoguer = "0.12.0"
unicode-width = { version = "0.2.0", default-features = false }
itertools = "0.14.0"
indexmap = { version = "2.8.0", features = ["serde"] }
rand = "0.9.0"
ariadne = "0.6.0"
glob = "0.3.2"
walkdir = "2"
globset = "0.4"
rayon = "1.10.0"
bumpalo = { version = "3", features = ["collections", "serde"] }
dhat = "0.3"
ustr = { version = "1.1.0", features = ["serde"] }
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path", "include-exclude"] }
bincode = { version = "2.0.1", features = ["serde"] }
libc = "0.2.175"
shell-words = "1.1.0"
ryu = "1.0"
itoa = "1.0"
notify = "8.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde-sarif = "0.8"
schemars = { version = "1.1", features = ["preserve_order"] }
simdutf8 = { version = "0.1.5" }

[dependencies]
mago-atom = { workspace = true }
mago-syntax = { workspace = true }
mago-syntax-core = { workspace = true }
mago-reporting = { workspace = true }
mago-database = { workspace = true }
mago-linter = { workspace = true }
mago-names = { workspace = true }
mago-formatter = { workspace = true }
mago-text-edit = { workspace = true }
mago-php-version = { workspace = true }
mago-composer = { workspace = true }
mago-prelude = { workspace = true }
mago-analyzer = { workspace = true }
mago-algebra = { workspace = true }
mago-codex = { workspace = true }
mago-guard = { workspace = true }
mago-orchestrator = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
termtree = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
ureq = { workspace = true }
self-replace = { workspace = true }
semver = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
diffy = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
rayon = { workspace = true }
indoc = { workspace = true }
bumpalo = { workspace = true }
unicode-width = { workspace = true }
notify = { workspace = true }
dhat = { workspace = true, optional = true }
schemars = { workspace = true }
unidiff = "0.4"

[dev-dependencies]
temp-env = "0.3.6"
pretty_assertions = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
mago-prelude = { workspace = true, features = ["build"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_env = "musl", target_env = "gnu"))'.dependencies]
mimalloc = { version = "0.1.47" }

[features]
dhat-heap = ["dhat"]

[profile.release]
opt-level = 3
debug = false
strip = 'symbols'
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = false
codegen-units = 1
rpath = true

[profile.memory-debug]
inherits = 'release'
debug = true
strip = 'none'

[profile.dev]
debug = 'full'
opt-level = 0
lto = 'off'
panic = 'unwind'
